--- a/btm_menu_test/app/src/main/AndroidManifest.xml
+++ b/btm_menu_test/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -23,7 +23,18 @@
         </activity>
         <activity
             android:name=".CalenderActivity"
-            android:theme="@style/CustomActivityTheme" />
+            android:theme="@style/CustomActivityTheme1" />
+        <activity android:name=".LinkActivity" />
+        <activity android:name=".ImageActivity"
+            android:theme="@style/CustomActivityTheme1"/>
+        <activity android:name=".TipActivity"
+            android:theme="@style/CustomActivityTheme1"/>
+        <activity android:name=".SupplementsActivity"
+            android:theme="@style/CustomActivityTheme1"/>
+        <activity android:name=".EggSub"/>
+        <activity android:name=".GameActivity"/>
+        <activity android:name=".eggTouchGame"/>
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
