금연일지_금연팁_알깨기수정본_자가진단_데이터입력_메인화면_실시간텍스트값변경

--- a/btm_menu_test/app/src/main/AndroidManifest.xml
+++ b/btm_menu_test/app/src/main/AndroidManifest.xml
@@ -15,11 +15,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".CalenderActivity"
@@ -34,6 +30,16 @@
         <activity android:name=".EggSub"/>
         <activity android:name=".GameActivity"/>
         <activity android:name=".eggTouchGame"/>
+        <activity android:name=".SmokeTest"/>
+        <activity
+            android:name=".SmokeActivity"
+            android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
 
