합본 06.04 (2,9제외)_gameactivity_main수정

--- a/btm_menu_test/app/src/main/AndroidManifest.xml
+++ b/btm_menu_test/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
             android:name=".SupplementsActivity"
             android:theme="@style/CustomActivityTheme1"/>
         <activity android:name=".EggSub"/>
-        <activity android:name=".GameActivity"/>
+        <activity android:name=".GameActivity"
+            android:theme="@style/CustomActivityTheme1"/>
         <activity android:name=".eggTouchGame"/>
         <activity android:name=".SmokeTest"/>
         <activity android:name=".MyAlarmActivity"/>
